fix placement of navbar and copyright on small devices

--- a/src/stylesheets/contact.css
+++ b/src/stylesheets/contact.css
@@ -108,10 +108,13 @@ textarea {
         justify-content: center;
         align-items: center;
         opacity: 1;
+        padding: 0;
+        margin: 0;
     }
 
     #contact {
         background: none;
         box-shadow: none;
+        height: auto;
     }
 }
