--- a/src/stylesheets/navbar.css
+++ b/src/stylesheets/navbar.css
@@ -19,7 +19,7 @@
 
 @media screen and (max-width: 600px) {
     .nav-bar {
-        margin-top: 4vh;
+        margin-top: 20vh;
     }
     .nav-bar > button {
         margin: .5rem;
